After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 759408 - Do not use uninitialized var
Do not use uninitialized var
Status: RESOLVED FIXED
Product: glib
Classification: Platform
Component: win32
unspecified
Other Linux
: Normal normal
: ---
Assigned To: gtk-win32 maintainers
gtk-win32 maintainers
Depends on:
Blocks:
 
 
Reported: 2015-12-13 18:36 UTC by Paolo Borelli
Modified: 2015-12-14 13:35 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
patch (1.06 KB, patch)
2015-12-13 18:36 UTC, Paolo Borelli
committed Details | Review

Description Paolo Borelli 2015-12-13 18:36:22 UTC
Not only a MSVC warning, but a real bug as far as I can see
Comment 1 Paolo Borelli 2015-12-13 18:36:49 UTC
Created attachment 317308 [details] [review]
patch
Comment 2 Matthias Clasen 2015-12-13 21:38:31 UTC
Review of attachment 317308 [details] [review]:

Ok
Comment 3 LRN 2015-12-14 01:13:56 UTC
Review of attachment 317308 [details] [review]:

Yes, this is a typo. "app" is an iterator variable for another cycle (iterating over apps) later in this function, it should be "handler->app" in the handler cycle that iterates over handlers for an extension.

Good news is that while this is a bug, it only results in g_app_info_get_all_for_type() producing duplicates in the list it returns.
Comment 4 Paolo Borelli 2015-12-14 13:34:52 UTC
This problem has been fixed in our software repository. The fix will go into the next software release. Once that release is available, you may want to check for a software upgrade provided by your Linux distribution.