W32: fix uninitialized var in g_app_info_get_all_for_type

Compare with the handler->app, not with the app var which is not
initialized yet

https://bugzilla.gnome.org/show_bug.cgi?id=759408